[package]
name = "moto_arris_cm_stats"
version = "0.1.0"
authors = ["Jason DiCioccio <jd@ods.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isahc = "0.8"
env_logger = "*"
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
clap = "*"