[package]
name = "cablemodem_stats"
version = "0.2.0"
authors = ["Jason DiCioccio <jd@ods.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isahc = "~1.7"
env_logger = "*"
regex = "1"
crabquery = "0.1.9"
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
clap = { version = "3.2.16", features = ["derive"] }
