[package]
name = "cablemodem_stats"
version = "0.2.1"
authors = ["Jason DiCioccio <jd@ods.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isahc = "~1.7"
env_logger = "*"
regex = "1"
crabquery = "0.1.9"
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
clap = { version = "3.2.16", features = ["derive"] }
influxdb_rs = { git = "https://github.com/jdicioccio/influxdb-rs", branch = "fix-Point-forced-borrow" }
chrono = { version = "0.4.21", default-features = false, features = ["clock", "std"] }
url = "2.2.2"
tokio = { version = "1.20.1", features = ["rt-multi-thread", "macros"] }
